# glance

./: .gitreview  MANIFEST.in  glance.spec  requirements.txt  setup-install.sh  setup.cfg
etc/: glance-api-dist.conf  glance-cache-dist.conf  glance-registry-dist.conf  glance-scrubber-dist.conf  openstack-glance-registry.upstart
etc/setup-scripts/: openstack-glance-api  openstack-glance-registry  openstack-glance-scrubber
glance/api/v1/: images.py  upload_utils.py
glance/store/: filesystem.py
patches/: 0001-Don-t-access-the-net-while-building-docs.patch  0002-Use-updated-parallel-install-versions-of-epel-packag.patch  0003-avoid-the-uneeded-dependency-on-Crypto.Random.patch  0004-Avoid-NULLs-in-crypto-padding.patch  0005-Remove-runtime-dep-on-python-pbr.patch  0006-avoid-unsupported-storage-drivers.patch  0007-notify-calling-process-we-are-ready-to-serve.patch  glance-api-dist.conf  openstack-glance-api.upstart  openstack-glance-scrubber.upstart
