[metadata]
name = glance
version = 2014.1.2
summary = OpenStack Image Service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[install]
install_lib = /usr/share    

[files]
packages =
    glance

data_files =
    etc/rc.d/init.d = etc/setup-scripts/*

[entry_points]
console_scripts =
    glance-api = glance.cmd.api:main
    glance-cache-prefetcher = glance.cmd.cache_prefetcher:main
    glance-cache-pruner = glance.cmd.cache_pruner:main
    glance-cache-manage = glance.cmd.cache_manage:main
    glance-cache-cleaner = glance.cmd.cache_cleaner:main
    glance-control = glance.cmd.control:main
    glance-manage = glance.cmd.manage:main
    glance-registry = glance.cmd.registry:main
    glance-replicator = glance.cmd.replicator:main
    glance-scrubber = glance.cmd.scrubber:main
glance.common.image_location_strategy.modules =
    location_order_strategy = glance.common.location_strategy.location_order
    store_type_strategy = glance.common.location_strategy.store_type

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = glance/locale
domain = glance

[update_catalog]
domain = glance
output_dir = glance/locale
input_file = glance/locale/glance.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = glance/locale/glance.pot

[bdist_rpm]
release = vs1
requires=
    MySQL-python  
    pysendfile  
    python(abi) = 2.6
    python-cinderclient  
    python-crypto  
    python-eventlet  
    python-httplib2  
    python-iso8601  
    python-jsonschema  
    python-keystoneclient  
    python-migrate  
    python-oslo-config >= 1:1.2.0
    python-oslo-messaging  
    python-paste-deploy1.5  
    python-routes1.12  
    python-sqlalchemy0.7  
    python-swiftclient  
    python-webob1.2  
    pyxattr  
    rpmlib(CompressedFileNames) <= 3.0.4-1
    rpmlib(FileDigests) <= 4.6.0-1
    rpmlib(PartialHardlinkSets) <= 4.0.4-1
    rpmlib(PayloadFilesHavePrefix) <= 4.0-1
    rpmlib(PayloadIsXz) <= 5.2-1
post-install = setup-install.sh